# mmg

./: .gitignore  CMakeLists.txt  readme.md
config/: mmg_config.yaml  sim_config.yaml
include/: mmg_obs.hpp  mmg_ode.hpp  mmg_sim.hpp
src/: main.cpp  mmg_sim.cpp
test/: CMakeLists.txt  test.cpp  test_mmg_config.yaml  test_sim_config.yaml
